# adaptivequantum

./: README.md  pyproject.toml  requirements.txt  setup.py
figures/paper/: fig10_caption.tex  fig2b_caption.tex  fig2c_caption.tex  fig9_caption.tex  table1_barren_plateau.md  table1_barren_plateau.tex  table1_barren_plateau_with_ci.tex  table1_gradient_improvement.tex  table2_photonic_compilation.md  table2_photonic_compilation.tex  table3_qec_efficiency.md  table3_qec_efficiency.tex
figures/paper/fig2d/: fig2d_caption.tex
figures/supplementary/: supplementary_information.md
notebooks/exploration/: 01_quantum_noise_analysis.ipynb  02_noise_simulation.ipynb
notebooks/results/: 01_barren_plateau_results.ipynb
src/: __init__.py
src/physics/: lie_algebra_analysis.py  lie_algebra_analysis_fixed.py  synergy_analysis.py
src/thrust1/: __init__.py
src/thrust2/: __init__.py  adjust_to_targets.py  create_final_results.py  day1_completion_check.py  final_benchmark.py  final_verification.py  fix_and_train.py  quick_fix_baseline.py  start_training.py  verify_day2.py  verify_phase3_completion.py  verify_simulator.py
src/thrust3/: __init__.py
src/utils/: __init__.py  shot_noise_analysis.py  statistical_analysis.py  statistical_analysis_corrected.py  statistical_analysis_final.py  statistical_analysis_fixed.py
src/visualization/: create_figure1.py  create_figure1_complete.py  create_figure5.py  create_figure5_corrected.py  create_supplementary_figures.py  create_table2_direct.py  format_table2.py
tests/: conftest.py  test_basic.py  test_imports.py
(+126 files in other folders)
